--- a/static/style.css
+++ b/static/style.css
@@ -718,9 +718,9 @@ header .tagline {
 }
 
 .player-chip.fc {
-    border-color: #10b981;
-    background-color: #ecfdf5;
-    color: #065f46;
+    border-color: #dc2626;
+    background-color: #fef2f2;
+    color: #991b1b;
 }
 
 .no-players {
