--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
                     <button class="tab-btn active" data-tab="schedule">Game Schedule</button>
                     <button class="tab-btn" data-tab="analysis">Analysis & Recommendations</button>
                     <button class="tab-btn" data-tab="comparison">Schedule Comparison</button>
+                    <button class="tab-btn" data-tab="teams">Top Teams</button>
                 </div>
                 
                 <div id="schedule-tab" class="tab-content active">
@@ -100,6 +101,12 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                
+                <div id="teams-tab" class="tab-content">
+                    <div id="teams-content" class="teams-placeholder">
+                        <p>📊 Select a gameweek to see the top 10 teams with most games</p>
                     </div>
                 </div>
             </div>
