Remove Analyze button and trigger analysis automatically when clicking Analysis tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,6 @@
                     <p><strong>Total Budget:</strong> $<span id="total-budget">0.0</span>M</p>
                 </div>
 
-                <button id="analyze-btn" class="primary-btn">Analyze & Get Recommendations</button>
                 <button id="clear-roster-btn" class="secondary-btn">Clear Roster</button>
             </div>
 
@@ -77,7 +76,7 @@
                 
                 <div id="analysis-tab" class="tab-content">
                     <div id="analysis-content" class="analysis-placeholder">
-                        <p>👈 Select your roster and click "Analyze" to see recommendations</p>
+                        <p>👈 Select your roster and click this tab to see analysis & recommendations</p>
                     </div>
                 </div>
                 
